--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,3 @@
-= XYZ Reader Starter Code
+# XYZ Reader Project
 
-This repository stores the starter code for the XYZ Reader project in Udacity's Android Nanodegree.
+## What this project was about 
