--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,14 @@
 # XYZ Reader Project
 
 ## What this project was about 
+
+### You will improve an app for this project:
+
+    XYZ Reader: A mock RSS feed reader featuring banner photos and headlines. Download the code here.
+
+The app is currently functional, and work in most cases for most users.
+
+Your job will be to take the user feedback in the UI Review node, and implement changes that will improve the UI and make it conform to Material Design.
+
+## What I have done
+
